@@ -76,8 +76,8 @@ Description: an HTTP library implementation in C -- Shared library
  .
  This package contains the shared library.
 
-Package: libsoup2.4-1-dbg
-Section: libdevel
+Package: libsoup2.4-dbg
+Section: debug
 Priority: extra
 Architecture: any
 Depends: libsoup2.4-1 (= ${binary:Version}),
@@ -167,34 +167,6 @@ Description: an HTTP library implementation in C -- GNOME support development fi
   * Basic client-side SOAP and XML-RPC support
  .
  This package contains the development files for the GNOME support.
-
-Package: libsoup-gnome2.4-1-dbg
-Section: libdevel
-Priority: extra
-Architecture: any
-Depends: libsoup-gnome2.4-1 (= ${binary:Version}),
-         ${misc:Depends}
-Description: an HTTP library implementation in C -- GNOME support debugging symbols
- It was originally part of a SOAP (Simple Object Access Protocol).
- implementation called Soup, but the SOAP and non-SOAP parts have now been
- split into separate packages.
- .
- libsoup uses the Glib main loop and is designed to work well with GTK+
- applications.  This enables GNOME applications to access HTTP servers
- on the network in a completely asynchronous fashion, very similar to
- the GTK+ programming model (a synchronous operation mode is also
- supported for those who want it).
- .
- Features:
-  * Both asynchronous (GMainLoop and callback-based) and synchronous APIs
-  * Automatically caches connections
-  * SSL Support using GnuTLS.
-  * Proxy support, including authentication and SSL tunneling
-  * Client support for Digest, NTLM, and Basic authentication
-  * Server support for Digest and Basic authentication
-  * Basic client-side SOAP and XML-RPC support
- .
- This package contains the debugging symbols for the GNOME support.
 
 Package: libsoup2.4-doc
 Section: doc
