@@ -31,6 +31,10 @@ libsoup2.4 (2.26.0-1) UNRELEASED; urgency=low
     different than libsoup2.4-dev one
   * debian/copyright: Add missing copyright holder.
 
+  [ Josselin Mouette ]
+  * Only ship one debug package, there’s no point in splitting it in 
+    two.
+
  -- Gustavo Noronha Silva <kov@debian.org>  Thu, 05 Mar 2009 07:49:04 -0300
 
 libsoup2.4 (2.25.91-1) experimental; urgency=low
